--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../../assets/fonts/Montserrat-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: url('../../assets/fonts/Inter-VariableFont_opsz,wght.ttf') format('truetype');
+}
+
 * {
     margin: 0;
     font-family: 'Monsterrat', sans-serif;
@@ -296,14 +306,14 @@
     }
 }
 
-.main__buttonLight{
+.main__buttonLight {
     position: absolute;
 
     left: 3px;
     bottom: -3px;
 }
 
-.main__buttonLightTop{
+.main__buttonLightTop {
     position: absolute;
 
     right: 3px;
@@ -1264,7 +1274,7 @@
     }
 
     .main__promotionTooth {
-        top: -15px;
+        top: -30px;
         left: -35px;
     }
 
@@ -1426,8 +1436,8 @@
         font-size: 21px;
         line-height: 25px;
     }
-    
-    .med__doctorText{
+
+    .med__doctorText {
         max-width: 270px;
     }
 }
