--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1381,7 +1381,7 @@
 
     .med__guarantee {
         width: 350px;
-        height: 296px;
+        height: 302px;
     }
 
     .med__guaranteeText {
@@ -1399,6 +1399,7 @@
     .med__guaranteeInfo {
         gap: 7px;
         padding: 25px 24px 15px 15px;
+        margin-bottom: 10px;
     }
 
     .med__guaranteePoints {
