--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1174,7 +1174,7 @@
   }
   .med__guarantee {
     width: 350px;
-    height: 296px;
+    height: 302px;
   }
   .med__guaranteeText {
     max-width: 160px;
@@ -1189,6 +1189,7 @@
   .med__guaranteeInfo {
     gap: 7px;
     padding: 25px 24px 15px 15px;
+    margin-bottom: 10px;
   }
   .med__guaranteePoints {
     position: relative;
